fix picture distortion and footer links

--- a/app/assets/stylesheets/account.scss
+++ b/app/assets/stylesheets/account.scss
@@ -70,6 +70,7 @@
   border-radius: 50%;
   margin: 1rem 3rem;
   cursor: pointer;
+  object-fit: cover;
 }
 
 .account-picture-container {
