--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -28,6 +28,7 @@
   width: 75px;
   border-radius: 50%;
   margin-right: 3rem;
+  object-fit: cover;
 }
 .form-pictures {
   width: 1200px;
