--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -95,6 +95,7 @@
 .result-picture {
   width: 200px;
   height: 200px;
+  object-fit: cover;
 }
 
 .recommendations-result-top-row {
